Fix horizontal scroll on landing

--- a/src/styles/layout/Landing.scss
+++ b/src/styles/layout/Landing.scss
@@ -7,7 +7,8 @@
   align-items: center;
   border-bottom: solid 1px #d8d8d8;
   @media (min-width: 768px) {
-    min-height: 92vh;
+    min-height: 90vh;
+    padding-top: 20px;
   }
   &__logo__img {
     width: 250px;
